--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     width: 640px;
     height: 640px;
     border: 2px solid #000;
+    perspective: 1000px;
 }
 
 .memory-card{
@@ -25,11 +26,17 @@ body {
     position: relative;
     border: 5px solid #000;
     transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
 }
 
 .memory-card active{
     transform: scale(.97);
     transition: transform .2s;
+}
+
+.memory-card.flip{
+    transform: rotateY(180deg);
 }
 
 .front-face,
@@ -40,6 +47,11 @@ body {
     position: absolute;
     border-radius: 5px;
     background-color: #FEFFA7;
+    backface-visibility: hidden;
+}
+
+.front-face{
+    transform: rotateY(180deg);
 }
 
 img{
